Fix x-overflow in searchresultrow

--- a/static/styles/search-box.css
+++ b/static/styles/search-box.css
@@ -55,6 +55,7 @@
     color: black;
     padding: 5px;
     font-size: 14px;
+    overflow-x: scroll;
 }
 
 .search-result-row:not(:first-child) {
